--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "type-check": "tsc --noEmit",
     "lint": "eslint .",
     "format": "prettier --write \"**/*.{ts,js,json,md}\"",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "preversion": "[ \"$(git rev-parse --abbrev-ref HEAD)\" = \"main\" ] || (echo \"Error: Must be on main branch to version\" && exit 1) && git pull origin main && git checkout -b \"chore/bump-version-$(date +%s)\"",
+    "postversion": "git push --follow-tags && gh pr create --title \"chore: bump version $npm_package_version\" --body \"\""
   },
   "repository": {
     "type": "git",
