docs: add AGENTS.md and CLAUDE.md for AI agent guidelines
Add project documentation files for AI agents working on the codebase:
- AGENTS.md: Architecture, conventions, and implementation details
- CLAUDE.md: Reference to AGENTS.md
- Update .gitignore to exclude audit files and reference repos

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,13 @@ Temporary Items
 
 # sftp configuration file
 sftp-config.json
+
+### Audit Files ###
+AUDIT.md
+ALGORITHM_AUDIT.md
+IMPLEMENTATION_COMPARISON.md
+PR_TASKS.md
+
+### Reference Repos ###
+rouge-original/
+ROUGE-2.0-reference/
