fix: add exports field to package.json
Add conditional exports field for proper ESM/CJS dual publishing support
in modern Node.js environments. This ensures the correct module format
is loaded based on the import/require statement used.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,13 @@
   "main": "dist/rouge.js",
   "module": "dist/rouge.mjs",
   "types": "dist/rouge.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/rouge.d.ts",
+      "import": "./dist/rouge.mjs",
+      "require": "./dist/rouge.js"
+    }
+  },
   "scripts": {
     "test": "jest",
     "build": "npm run clean && npm run build:js && npm run build:types",
