fix: add files field and correct directories in package.json
Add files field to control what gets published to npm and fix the
directories.lib field to point to the correct dist folder instead of
the non-existent lib folder.

--- a/package.json
+++ b/package.json
@@ -55,8 +55,12 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "directories": {
-    "lib": "lib",
+    "lib": "dist",
     "test": "test"
   }
 }
