--- a/package.json
+++ b/package.json
@@ -62,8 +62,12 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "directories": {
-    "lib": "lib",
+    "lib": "dist",
     "test": "test"
   }
 }
