fix: use npm OIDC for publish authentication
Remove NODE_AUTH_TOKEN in favor of npm's native OIDC integration.
This is more secure as it uses short-lived tokens from GitHub Actions
instead of long-lived npm tokens stored as secrets.

Requires npm package to be configured to trust this GitHub repository
as a publishing source.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,6 +56,9 @@ jobs:
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
+      # Publishing uses npm's OIDC integration for authentication.
+      # Requires the npm package to be configured to trust GitHub Actions:
+      # 1. Go to npmjs.com > Package Settings > Publishing access
+      # 2. Enable "Require two-factor authentication or an automation or granular access token"
+      # 3. Configure trusted publishers to allow this GitHub repository
       - run: npm publish --provenance --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
