--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       contents: read
     strategy:
       matrix:
-        node-version: [18, 20, 22, 24]
+        node-version: [20, 22, 24]
     steps:
     - uses: actions/checkout@v6
     - name: Verify dist is not committed
@@ -37,3 +37,4 @@ jobs:
         test -f dist/rouge.mjs || (echo "Missing dist/rouge.mjs" && exit 1)
         test -f dist/rouge.d.ts || (echo "Missing dist/rouge.d.ts" && exit 1)
     - run: npm test
+    
