--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
-          node-version-file: '.nvmrc'
+          node-version: '22'
           cache: 'npm'
       - run: npm ci
       - run: npm test
@@ -52,9 +52,10 @@ jobs:
       id-token: write
     steps:
       - uses: actions/checkout@v6
+      # Node 24 required for npm OIDC trusted publishing (npm 11.5.1+)
       - uses: actions/setup-node@v6
         with:
-          node-version-file: '.nvmrc'
+          node-version: '24'
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
